Fix axe errors. Align navigation

--- a/src/NavMenu.scss
+++ b/src/NavMenu.scss
@@ -33,6 +33,7 @@
 
     &--level-0 {
       display: flex;
+      justify-content: center;
       padding-left: 0;
       text-transform: uppercase;
       flex-direction: row;
