--- a/src/Navigation.scss
+++ b/src/Navigation.scss
@@ -60,7 +60,7 @@
     display: none;
     position: absolute;
     left: 0;
-    background-color: $firstComplimentBackground;
+    background-color: $secondComplimentBackground;
     width: 100%;
     box-shadow: 0px 8px 16px 0px hsla(0, 0%, 0%, 0.2);
     z-index: 1;
